[package]
name = "wintls"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ChrisDenton/wintls/"
documentation = "https://chrisdenton.github.io/wintls/wintls/index.html"
license = "MIT OR Apache-2.0"


[dependencies]

[features]
raw = []

[[example]]
name = "raw_tls"
required-features = ["raw"]

[[test]]
name = "raw"
required-features = ["raw"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"
rustdoc-args = ["--cfg", "docsrs"]
